added about text

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -10,7 +10,7 @@
 
     <div class="main-content">
         {{>header}}
-        <p>use this website to know weather</p>
+        <p>Use this website to know weather</p>
         <form>
             <input placeholder="location">
             <button>search</button>
